<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.fadhlillahb.covidtracker.ui.home.MainActivity"
        android:label="@string/title_home"
        tools:layout="@layout/activity_main" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.fadhlillahb.covidtracker.ui.History.HistoryActivity"
        android:label="@string/history"
        tools:layout="@layout/activity_history" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.fadhlillahb.covidtracker.ui.notifications.NotificationsFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_help" />
</navigation>